autoprefixer; fix blurry text animtation issue

--- a/style/animation.scss
+++ b/style/animation.scss
@@ -2,35 +2,29 @@
 @keyframes newTile {
   from {
     transform: scale(0);
-    -webkit-transform: scale(0);
   }
   to {
     transform: scale(1);
-    -webkit-transform: scale(1);
   }
 }
 
 @keyframes popup_as_merged {
   from {
     transform: scale(0);
-    -webkit-transform: scale(0);
   }
   to {
     z-index: 20;
     transform: scale(1);
-    -webkit-transform: scale(1);
   }
 }
 
 @keyframes popup_as_merged_2 {
   from {
     transform: scale(0);
-    -webkit-transform: scale(0);
   }
   to {
     z-index: 20;
     transform: scale(1);
-    -webkit-transform: scale(1);
   }
 }
 
