--- a/style/cell.scss
+++ b/style/cell.scss
@@ -18,21 +18,14 @@
   color: #766;
   border-radius: 5px;
   margin: 1%;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  justify-content: center;
+  align-items: center;
   position: absolute;
   font-size: 4rem;
   width: 22.5%;
   height: 22.5%;
   font-family: "Clear Sans";
-  will-change: transform;
 
   &.merged {
     z-index: 15;
